# quicfetch

./: CMakeLists.txt  api.h  build.zig  example.cpp  main.cpp  quicfetch.h  quicfetch.zig  readme.md  web.zig
.github/workflows/: ci.yml
ci/: build.sh
include/: quicfetch.h
